Fix for css transition flickering and minor layout adjustments

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -113,3 +113,16 @@
     }
   }
 }
+
+// Fixes transition flicker on items using CSS transitions
+// -------------------------
+.fixTransitionFlicker() {
+  // http://stackoverflow.com/questions/3461441/prevent-flicker-on-webkit-transition-of-webkit-transform
+
+  -webkit-backface-visibility: hidden;
+  -khtml-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
