--- a/src/less/partials/base.less
+++ b/src/less/partials/base.less
@@ -59,3 +59,7 @@ figure {
         padding-top: (@heroHeight + @heroTopMargin);
     }
 } // #wrapper
+
+.flexslider {
+    .fixTransitionFlicker();
+}
