--- a/src/less/partials/hentry.less
+++ b/src/less/partials/hentry.less
@@ -7,7 +7,7 @@
 
   position: relative;
   max-width: @contentMaxWidth;
-  margin: 0 auto;
+  margin: 0 auto @rhythmUnit;
 
   img {
     .border-radius(@baseBorderRadius);
