--- a/src/less/partials/main.less
+++ b/src/less/partials/main.less
@@ -27,6 +27,7 @@ body.home {
 
         .post {
             .column(3, 6);
+            margin-bottom: @rhythmUnit;
         }
     }
     #home-sidebar {
